# msgpack-cpp-lite

./: CMakeLists.txt  MessagePack.md  ProjectHome.md  Readme.md  msgpack.hpp
msgpack/: msgpack-lite.hpp
tests/: CMakeLists.txt  msgpack-lite_test.cpp
